hidden not necessary element

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -4,3 +4,6 @@ backgroundColor = "#EFEAE6"
 secondaryBackgroundColor = "#FCFCFC"
 textColor = "#604F3B"
 font = "Nunito"
+
+[client]
+toolbarMode = "hidden"
